# waveline

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE.txt  README.md  conditionwave.py  discover.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: api.rst  changelog.rst  conf.py  index.rst
docs/_templates/autosummary/: class.rst  module.rst
examples/: conditionwave.py  conditionwave_ae.py  conditionwave_pipeline.py  conditionwave_stream.py  conditionwave_stream_multichannel.py  linwave_ae.py  linwave_cont_tr.py  linwave_pipeline.py  linwave_pulsing.py  linwave_stream.py  linwave_stream_multichannel.py  main.py  spotwave_ae.py  spotwave_cont_rms.py  spotwave_cont_tr.py  spotwave_cont_tr_to_wav.py  spotwave_transmission.py
src/conditionwave/: core.py
src/waveline/: __init__.py  _common.py  conditionwave.py  datatypes.py  linwave.py  spotwave.py  utils.py
tests/system/: conftest.py  spotwave_fixture.py  test_spotwave_acquisition.py  test_spotwave_settings.py
tests/system/conditionwave/: conftest.py  test_conditionwave.py  test_conditionwave_acquisition.py  test_conditionwave_settings.py
tests/system/linwave/: conftest.py  test_acquisition.py  test_settings.py
tests/system/spotwave/: conftest.py  test_acquisition.py  test_settings.py  test_spotwave_acquisition.py  test_spotwave_settings.py
tests/unit/: test_conditionwave.py  test_linwave.py  test_microbenchmarks.py  test_spotwave.py  test_utils.py
